WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285905
REGRESSION (macOS 15.2): Null deref under UnifiedPDFPlugin::updateScrollingExtents
https://bugs.webkit.org/show_bug.cgi?id=285905
Summary
REGRESSION (macOS 15.2): Null deref under UnifiedPDFPlugin::updateScrollingEx...
Abrar Rahman Protyasha
Reported
2025-01-14 03:44:31 PST
rdar://138880307
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2025-01-14 03:49:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38989
EWS
Comment 2
2025-01-14 11:30:47 PST
Committed
288872@main
(b4098207bba0): <
https://commits.webkit.org/288872@main
> Reviewed commits have been landed. Closing PR #38989 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug