REGRESSION (macOS 15.2): Null deref under UnifiedPDFPlugin::updateScrollingExtents https://bugs.webkit.org/show_bug.cgi?id=285905 rdar://138880307

Reviewed by Tim Horton.

There are a couple of places in the plugin where we unconditionally
unwrap m_element->renderer(), when there is no guarantee about the
renderer's state (since we did not ensure layout is up to date), which
leads to null dereference crashes.

This patch addresses said crashes by checking the value of
m_element->renderer() before actually dereferencing the renderer object
and using it for the plugin's purposes.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::paintPDFSelection):
(WebKit::UnifiedPDFPlugin::updateScrollingExtents):

Canonical link: https://commits.webkit.org/288872@main